--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "memset0 <memset0@outlook.com>",
   "license": "AGPL-3.0-only",
   "scripts": {
-    "dev": "nodemon scripts/build-packages.ts",
+    "build": "ts-node -r tsconfig-paths/register ./scripts/build-packages.ts",
+    "dev": "nodemon ./scripts/build-packages.ts",
     "test": "ts-node -r tsconfig-paths/register ./tests/build.test.ts"
   },
   "dependencies": {
