--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tsconfig-paths": "^4.1.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1"
   }
 }
